# most-loved-crud-app

./: .prettierrc.toml  Cargo.toml
src/: handlers.rs  main.rs
