[package]
name = "quotes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.111"
tokio = { version = "1.12", features = ["full"] }
sqlx = { version = "0.7.3", default-features = false, features = ["uuid", "chrono", "runtime-tokio", "postgres", "tls-rustls"] }
uuid = { version = "1.7.0", features = ["serde", "v4"] }
chrono = { version = "0.4.19", features = ["serde"] }
